# RealManArmControl

./: .gitignore  README.md  pyproject.toml
scripts/: get_qpos.py  run_basic.py  run_pipeline.py
src/realmanarmcontrol/algorithms/yolo/: config.py  phantom_detector.py  run_detect.py
src/realmanarmcontrol/arm/: arm_controller.py  config.py  controller.py
src/realmanarmcontrol/base/: rm_robot_interface.py
src/realmanarmcontrol/controller/arm/: arm_config.py  arm_controller.py
src/realmanarmcontrol/controller/sensor/: camera_config.py  orbbec_controller.py
src/realmanarmcontrol/pipeline/: camera_arm_pipeline.py  pipleline_config.py
src/realmanarmcontrol/sensor/: README.MD  config.py  orbbec_controller.py  utils.py
tests/: show_depth_color_align.py  test_all.py  test_all_function.py  test_run_pipeline.py
