[project]
name = "realmanarmcontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tong.liu", email = "szliutong@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.2",
    "robotic-arm>=1.1.1",
    "scipy>=1.15.3",
    "termcolor>=3.1.0",
    "torch>=2.9.0.dev20250711",
    "torchvision>=0.24.0.dev20250712",
    "tqdm>=4.66.5",
]

[project.scripts]
realmanarmcontrol = "realmanarmcontrol:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu129"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
