[project]
name = "realmanarmcontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tong.liu", email = "szliutong@gmail.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "av",
    "matplotlib>=3.9.0",
    "numpy<2.0",
    "opencv-python",
    "pybind11==2.11.0",
    "pybind11-global==2.11.0",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pyorbbecsdk @ file:///home/user/Project/RealManArmControl/whl/pyorbbecsdk-2.0.13-cp310-cp310-linux_aarch64.whl",
    "robotic-arm>=1.1.1",
    "scipy>=1.15.3",
    "setuptools>=78.1.0",
    "termcolor>=3.1.0",
    "tqdm>=4.66.5",
    "wheel>=0.45.1",
]

[project.scripts]
realmanarmcontrol = "realmanarmcontrol:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu129"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
pyorbbecsdk = { path = "whl/pyorbbecsdk-2.0.13-cp310-cp310-linux_aarch64.whl" }
