[project]
name = "realmanarmcontrol"
version = "0.1.0"
description = "Project for RML63 Arm integrated control."
readme = "README.md"
authors = [
    { name = "tong.liu", email = "szliutong@gmail.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "av",
    "matplotlib>=3.9.0",
    "numpy<2.0",
    "opencv-python",
    "pybind11==2.11.0",
    "pybind11-global==2.11.0",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pyorbbecsdk @ file:///home/szliutong/Project/RealManArmControl/whl/pyorbbecsdk-2.0.13-cp310-cp310-linux_x86_64.whl",
    "rich>=14.1.0",
    "robotic-arm>=1.1.1",
    "scipy>=1.15.3",
    "setuptools>=78.1.0",
    "termcolor>=3.1.0",
    "torch",
    "torchvision",
    "tqdm>=4.66.5",
    "ultralytics>=8.3.179",
    "wheel>=0.45.1",
]

[project.scripts]
realmanarmcontrol = "realmanarmcontrol:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
pyorbbecsdk = { path = "whl/pyorbbecsdk-2.0.13-cp310-cp310-linux_x86_64.whl" }
